--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "spryker/glue-application-extension": "^1.0.0",
     "spryker/kernel": "^3.29.0",
     "spryker/navigation-storage": "^1.4.0",
+    "spryker/navigations-rest-api-extension": "^1.0.0",
     "spryker/symfony": "^3.0.0"
   },
   "require-dev": {
