Fix require dev dependencies.

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "spryker/url-storage": "^1.0.0"
   },
   "require-dev": {
-    "spryker/code-sniffer": "*",
-    "spryker/testify": "*"
+    "spryker/code-sniffer": "*"
   },
   "autoload": {
     "psr-4": {
